fix overflow-0.1

--- a/src/index.css
+++ b/src/index.css
@@ -130,4 +130,5 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-y: hidden;
 }
